quality(all): get swagger docs mostly complete
